--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,20 @@
 {
 	"dependencies": {
+		"@prisma/client": "5.20.0",
 		"body-parser": "^1.20.3",
 		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
-		"nodemon": "^3.1.7"
+		"joi": "^17.13.3",
+		"nodemon": "^3.1.7",
+		"pg": "^8.13.0"
 	},
 	"scripts": {
 		"start": "node index.js",
 		"dev": "nodemon index.js"
 	},
-	"type": "module"
+	"type": "module",
+	"devDependencies": {
+		"prisma": "5.20.0"
+	}
 }
